grammar.js
    source_file: ($) => repeat($._all),

    // Keywords
    variable_declaration_keyword: (_$) => choice("let", "var", "const"),
    variable_declaration_statement: ($) =>
      seq(
        $.variable_declaration_keyword,
        $._declare_variable,
        repeat(seq($.comma, $._declare_variable))
      ),
    _declare_variable: ($) =>
      prec.left(
        seq(
          $._ways_to_assign_variable,
          optional(seq($.assignment_operator, $._expression))
        )
      ),
    _number: (_$) => {
      const integer = /\d[0-9_]*/;
      const decimal = /(\d[0-9_]*)?\.\d[0-9_]*/;
      const exponential = seq(choice(integer, decimal), /e[+-]?\d[0-9_]*/);
      const binary = /0[bB][01][01_]*/;
      const octal = /0[oO][0-7][0-7_]*/;
      const hexadecimal = /0[xX][a-fA-F0-9][a-fA-F0-9_]*/;
      const bigint = seq(
        choice(integer, decimal, exponential, binary, octal, hexadecimal),
        "n"
      );

      return token(
        choice(
          integer,
          decimal,
          exponential,
          binary,
          octal,
          hexadecimal,
          bigint
        )
      );
    },
    number: ($) => $._number,

    // Regex
    regex: ($) => seq("/", repeat($._regex_fragment), "/"),
    _regex_fragment: ($) =>
      choice(/[^/\\\[]+/, $._escaped_character, $._regex_group),
    assignment_operator: (_$) => "=",

    // Boolean and Primitive Value
    variable: ($) => $._identifier,
    _identifier: (_$) => /[a-zA-Z$_#][a-zA-Z0-9$_]*/,

    _all: ($) =>
      choice(
        $._expression,
        $.import_statement,
        $.export_statement,
        $.semicolon,
        $.variable_declaration_statement,
        $.if_statement,
        $.else_statement,
        $.switch_statement,
        $.while_statement,
        $.do_while_statement,
        $.for_statement,
        $.return_statement,
        $.throw_statement,
        $.yield_statement,
        $.break_statement,
        $.continue_statement,
        $.try_statement,
        $.catch_statement,
        $.finally_statement,
        $.debugger_statement,
        $.label,
        $.statement_block,
      ),
  },
});
